@@ -50,9 +50,8 @@ import java.io.File;
 import java.io.IOException;
 
 /**
- * User: Mathias Lux, mathias@juggle.at
- * Date: 25.05.12
- * Time: 12:04
+ * Simple class showing the use of the ParallelIndexer, which uses up as much CPU as it can get.
+ * @author Mathias Lux, mathias@juggle.at and Nektarios Anagnostopoulos, nek.anag@gmail.com
  */
 public class ParallelIndexing {
     public static void main(String[] args) throws IOException {
