@@ -5,16 +5,14 @@ Use the `GenericDocumentBuilder` to create a `DocumentBuilder`, for instance wit
   * Eventually enrich the documents with your own data.
   * Add the document to an index.
 
-There are quite a lot of different features available in LIRE. The `GenericDocumentBuilder` can take any `LireFeature`
-implementation and create a builder class from it. If you need more than one feature, then take a look at the
-`ChainedDocumentBuilder` (see below).
+There are quite a lot of different features available in LIRE. The `GlobalDocumentBuilder` can take any `LireFeature`
+implementation and create a builder class from it. If you need more than one feature, then you can add `Extractors` to the `GlobalDocumentBuilder` (see below).
 
 ## Sample Code - Simple Indexing
 
     /**
-     * Simple index creation with Lire
-     *
-     * @author Mathias Lux, mathias@juggle.at
+     * Simple class showing the process of indexing
+     * @author Mathias Lux, mathias@juggle.at and Nektarios Anagnostopoulos, nek.anag@gmail.com
      */
     public class Indexer {
         public static void main(String[] args) throws IOException {
@@ -34,18 +32,17 @@ implementation and create a builder class from it. If you need more than one fea
             ArrayList<String> images = FileUtils.getAllImages(new File(args[0]), true);
 
             // Creating a CEDD document builder and indexing all files.
-            DocumentBuilder builder = new GenericDocumentBuilder(CEDD.class);
+            GlobalDocumentBuilder globalDocumentBuilder = new GlobalDocumentBuilder(CEDD.class);
             // Creating an Lucene IndexWriter
-            IndexWriterConfig conf = new IndexWriterConfig(LuceneUtils.LUCENE_VERSION,
-                    new WhitespaceAnalyzer(LuceneUtils.LUCENE_VERSION));
-            IndexWriter iw = new IndexWriter(FSDirectory.open(new File("index")), conf);
+            IndexWriterConfig conf = new IndexWriterConfig(new WhitespaceAnalyzer());
+            IndexWriter iw = new IndexWriter(FSDirectory.open(Paths.get("index")), conf);
             // Iterating through images building the low level features
             for (Iterator<String> it = images.iterator(); it.hasNext(); ) {
                 String imageFilePath = it.next();
                 System.out.println("Indexing " + imageFilePath);
                 try {
                     BufferedImage img = ImageIO.read(new FileInputStream(imageFilePath));
-                    Document document = builder.createDocument(img, imageFilePath);
+                    Document document = globalDocumentBuilder.createDocument(img, imageFilePath);
                     iw.addDocument(document);
                 } catch (Exception e) {
                     System.err.println("Error reading image or indexing it.");
@@ -59,15 +56,9 @@ implementation and create a builder class from it. If you need more than one fea
     }
 
 
-## Sample Code - ChainedDocumentBuilder
-Use a new `ChainedDocumentBuilder` and add `DocumentBuilder` classes you like, such as ...
+## Sample Code - Multiple descriptors at once with Extractors
+Use a new `GlobalDocumentBuilder` and add `Extractor` classes you like, such as ...
 
-
-    /**
-     * Simple index creation with Lire
-     *
-     * @author Mathias Lux, mathias@juggle.at
-     */
     public class Indexer {
         public static void main(String[] args) throws IOException {
             // Checking if arg[0] is there and if it is a directory.
@@ -85,23 +76,21 @@ Use a new `ChainedDocumentBuilder` and add `DocumentBuilder` classes you like, s
             // Getting all images from a directory and its sub directories.
             ArrayList<String> images = FileUtils.getAllImages(new File(args[0]), true);
 
-            // Use multiple DocumentBuilder instances:
-            ChainedDocumentBuilder builder = new ChainedDocumentBuilder();
-            builder.addBuilder(new GenericDocumentBuilder(CEDD.class));
-            builder.addBuilder(new GenericDocumentBuilder(FCTH.class));
-            builder.addBuilder(new GenericDocumentBuilder(AutoColorCorrelogram.class));
-
+            // Creating a CEDD document builder and indexing all files.
+            GlobalDocumentBuilder globalDocumentBuilder = new GlobalDocumentBuilder(CEDD.class);
+            // and here we add those features we want to extract in a single run:
+            globalDocumentBuilder.addExtractor(FCTH.class);
+            globalDocumentBuilder.addExtractor(AutoColorCorrelogram.class);
             // Creating an Lucene IndexWriter
-            IndexWriterConfig conf = new IndexWriterConfig(LuceneUtils.LUCENE_VERSION,
-                    new WhitespaceAnalyzer(LuceneUtils.LUCENE_VERSION));
-            IndexWriter iw = new IndexWriter(FSDirectory.open(new File("index")), conf);
+            IndexWriterConfig conf = new IndexWriterConfig(new WhitespaceAnalyzer());
+            IndexWriter iw = new IndexWriter(FSDirectory.open(Paths.get("index")), conf);
             // Iterating through images building the low level features
             for (Iterator<String> it = images.iterator(); it.hasNext(); ) {
                 String imageFilePath = it.next();
                 System.out.println("Indexing " + imageFilePath);
                 try {
                     BufferedImage img = ImageIO.read(new FileInputStream(imageFilePath));
-                    Document document = builder.createDocument(img, imageFilePath);
+                    Document document = globalDocumentBuilder.createDocument(img, imageFilePath);
                     iw.addDocument(document);
                 } catch (Exception e) {
                     System.err.println("Error reading image or indexing it.");
@@ -117,23 +106,36 @@ Use a new `ChainedDocumentBuilder` and add `DocumentBuilder` classes you like, s
 ## Sample Code - Parallel Indexing
 If you have multiple CPU cores you can use the parallel indexing tool. Note that with the option for the threads, you
 just configure the number of consumer threads. There will be a monitor thread, a main thread and a producer thread too.
-However, only the n consumer threads plus the one producer thread will create CPU load, whereas the producer will just
-read and put it into a queue.
-
+However, only the n consumer threads plus the one producer thread will create CPU load, with the producer just
+reading from storage and putting it into a queue. Note also that for indexing wioth few features the I/O poses a
+serious bottleneck, so you should try to use SSDs if possible.
 
     /**
-     * Parallel index creation with Lire
-     *
-     * @author Mathias Lux, mathias@juggle.at
+     * Simple class showing the use of the ParallelIndexer, which uses up as much CPU as it can get.
+     * @author Mathias Lux, mathias@juggle.at and Nektarios Anagnostopoulos, nek.anag@gmail.com
      */
-    // use ParallelIndexer to index all photos from args[0] into "index"
-    // and use 6 threads (actually 7 with the I/O thread).
-    ParallelIndexer indexer = new ParallelIndexer(6, "index", "c:/temp/images/") {
-        // use this to add you preferred builders. For now we go for CEDD, FCTH and AutoColorCorrelogram
-        public void addBuilders(ChainedDocumentBuilder builder) {
-            builder.addBuilder(new GenericDocumentBuilder(CEDD.class));
-            builder.addBuilder(new GenericDocumentBuilder(FCTH.class));
-            builder.addBuilder(new GenericDocumentBuilder(AutoColorCorrelogram.class));
+    public class ParallelIndexing {
+        public static void main(String[] args) throws IOException {
+            // Checking if arg[0] is there and if it is a directory.
+            boolean passed = false;
+            if (args.length > 0) {
+                File f = new File(args[0]);
+                System.out.println("Indexing images in " + args[0]);
+                if (f.exists() && f.isDirectory()) passed = true;
+            }
+            if (!passed) {
+                System.out.println("No directory given as first argument.");
+                System.out.println("Run \"ParallelIndexing <directory>\" to index files of a directory.");
+                System.exit(1);
+            }
+
+            // use ParallelIndexer to index all photos from args[0] into "index" ... use 6 threads (actually 7 with the I/O thread).
+            ParallelIndexer indexer = new ParallelIndexer(6, "index", args[0]);
+            // use this to add you preferred builders. For now we go for CEDD, FCTH and AutoColorCorrelogram
+            indexer.addExtractor(CEDD.class);
+            indexer.addExtractor(FCTH.class);
+            indexer.addExtractor(AutoColorCorrelogram.class);
+            indexer.run();
+            System.out.println("Finished indexing.");
         }
-    };
-    indexer.run();
+    }
